(2002/08/15 - broeker) DOS/Cygwin bugfix: avoid setmode() if fopen() failed.
(2002/07/27 - broeker) Yet another round of Cygwin-related fixes.  Do the 
		       #include <fcntl.h> early enough, so checks for 
		       O_BINARY work.  Make sure that myexit() is always
		       called instead of calling exit() directly.  Add
		       AC_EXEEXT to configure.in.
(2002/07/10 - broeker) Get rid of assumption about values of access()
	               parameters W_OK and R_OK --- make assumptions only 
		       if system doesn't supply values.  Add check for 
		       existence of lstat(); fall back to stat() if not
		       available.  Avoid confusion of DOS' setmode() with
		       BSD function of same name...
(2002/07/07 - broeker) Delete tempfile before redirecting to it, to avoid 
	               complaints about clobbering from poorly configured 
		       default shells.
(2002/06/20 - broeker) Fix operation of -C -L0 if pattern contains any
	               upper-case characters.
(2002/06/20 - broeker) Fix handling of non-standard whitespace in Flex 
	               scanner. Should make it more robust against DOS text
		       files that ended up on a Unix box, and other unexpected
		       characters, and avoid SF bug #508060.
(2002/03/16 - broeker) Fix namelist handling bug: ./ in paths would cause 
	               search for next name to fail (SF bug #529618). 
		       -I/-p and their argument no longer have to be in 
		       one line inside the namelist file, and -I pathname
		       can now be quote-escaped.
(2002/03/13 - broeker) Add AC_PREREQ() call to configure.in.  Enables Cygwin
	               automagic hack to call the right autoconf for us.
(2002/03/13 - broeker) Replace all references to manpage 'regcmp(3X)' in
	               messages and comments by regcomp(3), which is what 
		       cscope actually uses.
(2002/03/08 - broeker) Fix completely broken handling of filenames with blanks